Fix feature image overflow issue

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -38,7 +38,7 @@ pre {
     clear: both;
     margin: 0 5%;
     @media only screen and (min-width: 1140px) {
-        width: 1024px;
+        max-width: 1024px;
         margin: 0 auto;
     }
 }
